styles/hide-player-ui.css
/* Foundry Version 13 */
.hide-player-ui.settings-form .form-group {
   margin-top: 0.5rem; 
   margin-bottom: 1rem;
}

.hide-player-ui.settings-form .warning-note {
    text-align: center;
    width: 350px;
    margin: 0 auto;
}

.hide-player-ui .sub-option-grouping {
    margin-left: 1rem;
    border-left: 1px solid #1c1c1c78;
    padding-left: 0.5rem;
}

.hide-player-ui .sub-sub-option-grouping {
   margin-left: 0.25rem;
   border-left: 1px solid #1c1c1c78;
   padding-left: 0.5rem;
}

.hide-player-ui .notes-second-line {
    margin-top: -0.75rem;
}

.hide-player-ui-hidden {
    display: none !important;
}

.hide-player-ui-controls #scene-controls {
    display: none !important;
}

.hide-player-ui-navigation #scene-navigation-expand {
    display: none !important;
}

.hide-player-ui-navigation #scene-navigation {
    display: none !important;
}

.hide-player-ui-navigation .monks-scene-navigation {
    display: none !important;
}

.hide-player-ui-navToggle #scene-navigation-expand {
    display: none !important;
}

.hide-player-ui-sceneList #scene-navigation {
    display: none !important;
}

.hide-player-ui-sceneList .monks-scene-navigation {
    display: none !important;
}

.hide-player-ui-bossBar .bossBar {
    display: none !important;
}

.hide-player-ui-sidebar #sidebar {
    display: none !important;
}

.hide-player-ui-sidebar #chat-message {
   display: none !important;
}

.hide-player-ui-chatLog #sidebar-tabs button[data-tab="chat"] {
    display: none !important;
}

.hide-player-ui-chatInput #sidebar-content #chat #chat-form {
   display: none !important;
}

.hide-player-ui-chatInput #chat-message {
   display: none !important;
}

.hide-player-ui-chatInput #roll-privacy {
   display: none !important;
}

.hide-player-ui-combatTracker #sidebar-tabs button[data-tab="combat"] {
    display: none !important;
}

.hide-player-ui-scenesDirectory #sidebar-tabs button[data-tab="scenes"] {
    display: none !important;
}

.hide-player-ui-actorsDirectory #sidebar-tabs button[data-tab="actors"] {
    display: none !important;
}

.hide-player-ui-itemsDirectory #sidebar-tabs button[data-tab="items"] {
    display: none !important;
}

.hide-player-ui-journalEntries #sidebar-tabs button[data-tab="journal"] {
    display: none !important;
}

.hide-player-ui-rollableTables #sidebar-tabs button[data-tab="tables"] {
    display: none !important;
}

.hide-player-ui-cardStacks #sidebar-tabs button[data-tab="cards"] {
    display: none !important;
}

.hide-player-ui-macros #sidebar-tabs button[data-tab="macros"] {
    display: none !important;
}

.hide-player-ui-audioPlaylists #sidebar-tabs button[data-tab="playlists"] {
    display: none !important;
}

.hide-player-ui-compendiumPacks #sidebar-tabs button[data-tab="compendium"] {
    display: none !important;
}

.hide-player-ui-gameSettings #sidebar-tabs button[data-tab="settings"] {
    display: none !important;
}

.hide-player-ui-sidebarToggle #sidebar-tabs button[data-action="toggleState"] {
    display: none !important;
}

.hide-player-ui-players #players {
    display: none !important;
}

.hide-player-ui-hotbar #hotbar {
    display: none !important;
}

.hide-player-ui-player-config .user-config {
    display: none !important;
}

.hide-player-ui-token-hud #token-hud {
    display: none !important;
}

.hide-player-ui-token-action-hud #token-action-hud {
    display: none !important;
}

.hide-token-custom-hotbar #custom-hotbar {
    display: none !important;
}

.hide-token-custom-hotbar #hotbar {
    display: none !important;
}

.hide-player-ui-dynamic-sized-sidebar #sidebar.collapsed {
    height: auto !important;
}

.hide-player-ui-dynamic-sized-sidebar #sidebar-tabs {
    justify-content: space-evenly;
}


/* LEGACY */
/* Pre-version 13 */
.hide-player-ui.settings-form .form-group {
   margin-top: 0.5rem; 
   margin-bottom: 1rem;
}

.hide-player-ui.settings-form .warning-note {
    text-align: center;
    width: 350px;
    margin: 0 auto;
}

.hide-player-ui-hidden {
    display: none !important;
}

.hide-player-ui-logo #logo {
    display: none !important;
}

.hide-player-ui-logo .new-logo {
   visibility: hidden !important;
}

.hide-player-ui-logo #controls {
   margin-top: 12px;
}

.hide-player-ui-navigation #navigation {
    display: none !important;
}

.hide-player-ui-navToggle #nav-toggle {
    display: none !important;
}

.hide-player-ui-sceneList #scene-list {
    display: none !important;
}

.hide-player-ui-sceneList .monks-scene-navigation {
    display: none !important;
}

.hide-player-ui-bossBar .bossBar {
    display: none !important;
}

.hide-player-ui-controls #controls {
    display: none !important;
}

.hide-player-ui-sidebar #sidebar {
    display: none !important;
}

.hide-player-ui-chatLog #sidebar-tabs a[data-tab="chat"] {
    display: none !important;
}

.hide-player-ui-chatInput #sidebar #chat #chat-form {
   display: none !important;
}

.hide-player-ui-chatInput #sidebar #chat #chat-controls {
   display: none !important;
}

.hide-player-ui-combatTracker #sidebar-tabs a[data-tab="combat"] {
    display: none !important;
}

.hide-player-ui-scenesDirectory #sidebar-tabs a[data-tab="scenes"] {
    display: none !important;
}

.hide-player-ui-actorsDirectory #sidebar-tabs a[data-tab="actors"] {
    display: none !important;
}

.hide-player-ui-itemsDirectory #sidebar-tabs a[data-tab="items"] {
    display: none !important;
}

.hide-player-ui-journalEntries #sidebar-tabs a[data-tab="journal"] {
    display: none !important;
}

.hide-player-ui-rollableTables #sidebar-tabs a[data-tab="tables"] {
    display: none !important;
}

.hide-player-ui-cardStacks #sidebar-tabs a[data-tab="cards"] {
    display: none !important;
}

.hide-player-ui-audioPlaylists #sidebar-tabs a[data-tab="playlists"] {
    display: none !important;
}

.hide-player-ui-compendiumPacks #sidebar-tabs a[data-tab="compendium"] {
    display: none !important;
}

.hide-player-ui-gameSettings #sidebar-tabs a[data-tab="settings"] {
    display: none !important;
}

.hide-player-ui-players #players {
    display: none !important;
}

.hide-player-ui-players #ui-top {
   margin-left: 10px !important;
}

.hide-player-ui-hotbar #hotbar {
    display: none !important;
}

.hide-player-ui-player-config .user-config {
    display: none !important;
}

.hide-player-ui-token-hud #token-hud {
    display: none !important;
}

.hide-player-ui-token-action-hud #token-action-hud {
    display: none !important;
}

.hide-token-custom-hotbar #custom-hotbar {
    display: none !important;
}

.hide-token-custom-hotbar #hotbar {
    display: none !important;
}

.hide-player-ui .sub-option-grouping {
    margin-left: 1rem;
    border-left: 1px solid #1c1c1c78;
    padding-left: 0.5rem;
}

.hide-player-ui .sub-sub-option-grouping {
   margin-left: 0.25rem;
   border-left: 1px solid #1c1c1c78;
   padding-left: 0.5rem;
}

.hide-player-ui .notes-second-line {
    margin-top: -0.75rem;
}

.hide-player-ui-dynamic-sized-sidebar #sidebar.collapsed {
    height: auto !important;
}

.hide-player-ui-dynamic-sized-sidebar #sidebar-tabs {
    justify-content: space-evenly;
}

